--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,4 +8,4 @@ jobs:
     env:
       MY_ENV_PATH: 'value is ${{ github.ref }}'
     steps:
-      - run: echo $MY_ENV_PATH
+      - run: echo $MY_ENV_PATH $REF
