--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -6,6 +6,6 @@ jobs:
   print_default_env:
     runs-on: [aliyun]
     env:
-      MY_ENV_PATH: 'value is ${{ runner.os }}'
+      OS:  ${{ runner.os }}
     steps:
-      - run: echo $MY_ENV_PATH
+      - run: echo $OS
