--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -4,6 +4,7 @@ on:
     branches: [main]
 jobs:
   print_default_env:
+    runs-on: ubuntu-latest
     env:
       OS: ${{ github.runner_os }}
     steps:
