--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,8 +5,6 @@ on:
 jobs:
   print_default_env:
     runs-on: ubuntu-latest
-    steps:
-     - name: step1
-       env:
-        OS: ${{ runner.os }}
-       run: echo $OS
+    env:
+      COUNT: "${{ 1 + 2}}"
+    run: echo $COUNT
