--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,4 +10,4 @@ jobs:
     env:
       TESTA: ${{ contains('hello', 'e') }}
     steps:
-      - run: echo $TESTA
+      - run: echo ${{ contains('hello', 'e') }}
