--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       fruits: ${{ toJSON([
-        { "name": 'apple', 'quantity': "1" },
-        { "name": 'orange', 'quantity': "2" },
-        { "name": 'pear', 'quantity': "1" }
+        { 'name': 'apple', 'quantity': '1' },
+        { 'name': 'orange', 'quantity': '2' },
+        { 'name': 'pear', 'quantity': '1' }
         ]) }}
       fruit_name: ${{env.fruits.*.name }}
     steps:
