--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -9,5 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       fruits: '[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]'
+      fruit_name: ${{ toJSON(fruits).*.name }}
     steps:
-      - run: echo $fruits
+      - run: echo $fruit_name
