--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,7 +8,7 @@ jobs:
   print_fruit_name:
     runs-on: ubuntu-latest
     env:
-      fruits: '[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]'
-      fruit_name: ${{ jobs.print_fruit_name.env.fruits }}
+      FRUITS: '[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]'
+      FRUITS_NAMES: ${{env.FRUITS }}
     steps:
       - run: echo $fruit_name
