--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,7 +8,7 @@ jobs:
   print_fruit_name:
     runs-on: ubuntu-latest
     env:
-      KEY_1: hello
-      KEY_2: ${{ env.KEY_1 }}
+      VAR1: hello
+      VAR2: ${{ env.VAR1 }} world  # 正确：VAR1 已定义
     steps:
-      - run: echo $KEY_2
+      - run: echo $VAR2
