--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,10 +5,15 @@ on:
     branches: [main]
 
 jobs:
-  print_fruit_name:
+  build:
     runs-on: ubuntu-latest
     env:
       VAR1: hello
-      VAR2: ${{ env.VAR1 }} world  # 正确：VAR1 已定义
+      VAR2: ${{ env.VAR1 }}
     steps:
-      - run: echo $VAR2
+      - name: 正确使用 env
+        # ✅ 在 env 字段中使用 ${{ env.VAR }}
+        env:
+          COMBINED: ${{ env.VAR1 }} world
+        # ✅ 在 shell 脚本中使用 $变量名
+        run: echo $COMBINED  # 输出: hello world
