--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -11,4 +11,5 @@ jobs:
       FRUITS: '[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]'
     steps:
       - name: print_fruits
-        run: echo ${{ env.FRUITS }}
+        run: echo ${{ fromJson(env.FRUITS) }}
+gi
