--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,7 +8,7 @@ jobs:
   fruits:
     runs-on: ubuntu-latest
     env:
-      FRUITS: ${{ fromJSON([{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}])}}
+      FRUITS: ${{ toJSON([{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}])}}
     steps:
       - name: print_fruits
         run: echo $FRUITS
