--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,7 +8,9 @@ jobs:
   fruits:
     runs-on: ubuntu-latest
     env:
-      FRUITS: ${{ toJSON('[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]')}}
+      FRUITS: '[{"name": "apple", "quantity": 1}, {"name": "orange", "quantity": 2}, {"name": "pear", "quantity": 1}]'
     steps:
       - name: print_fruits
-        run: echo $FRUITS
+        env:
+          FRUIT_NAMES: ${{ fromJSON(env.FRUITS) }}
+        run: echo $FRUIT_NAMES[0].name
