--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - name: print_fruits
         env:
-          XYZ: ${{ github.event.commits.*.email }}
+          XYZ: ${{ toJSON(github.event.commits).*.email }}
         run: echo $XYZ
