--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -7,8 +7,7 @@ on:
 jobs:
   fruits:
     runs-on: ubuntu-latest
-    steps:
-      - name: print_fruits
-        env:
-          XYZ: ${{ fromJSON(github.event.commits).*.email }}
-        run: echo $XYZ
+    env:
+      A1:'a'
+      B1: "b-${{ env.A1 }}"
+    - run: echo $B1
