--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     env:
       A1:'a'
-      B1: "b-${{ env.A1 }}"
+      B1: b-${{ env.A1 }}
     - run: echo $B1
