--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,6 +8,6 @@ jobs:
   fruits:
     runs-on: ubuntu-latest
     env:
-      A1:'a'
-      B1: b-${{ env.A1 }}
+      A1:a
+      B1: 'b-${{ env.A1 }}'
     - run: echo $B1
