--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -11,5 +11,5 @@ jobs:
       A1: a
       B1: b-${{ env.A1 }}
     steps:
-      - run: echo ${{ env.A1 }}
+      - run: echo "${{ env.A1 }}"
       - run: echo $B1
