--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -9,6 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     env:
       A1: a
-      B1: b-${{ env.A1 }}
     steps:
-      - run: echo $B1
+      - run: echo $A1
