--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,6 +10,6 @@ jobs:
       B1: b
     runs-on: ubuntu-latest
     env:
-      A1: 'a ${{env.B1}}'
+      A1: a ${{env.B1}}
     steps:
       - run: echo "${{env.A1}}"
