--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -9,7 +9,9 @@ jobs:
     env:
       B1: b
     runs-on: ubuntu-latest
-    env:
-      A1: a ${{env.B1}}
+
     steps:
-      - run: echo "${{env.A1}}"
+      - name: print_fruits
+        env:
+          A1: 'a ${{env.B1}}'
+        run: echo "${{env.A1}}"
