--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -14,4 +14,5 @@ jobs:
       - name: print_fruits
         env:
           A1: a ${{env.B1}}
-        run: echo "${{env.A1}}"
+        - run: echo "${{env.A1}}"
+        - run: echo "${toJSON(github)}"
