--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -14,4 +14,5 @@ jobs:
         env:
           A1: a ${{env.B1}}
         run: echo "${{env.A1}}"
+      - name: print_github
         run: echo "${toJSON(github)}"
