--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,10 +8,16 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     env:
-      job1_env1: job1
-      job1_env2: job2
+      job1_env1: job1_env1
     steps:
       - name: print_job1_env1
         run: echo "${{ env.job1_env1 }}"
       - name: print_job1_env2
         run: echo "${{ env.job1_env2 }}"
+  job2:
+    runs-on: ubuntu-latest
+    env:
+      job2_env1: ${{env.job1_env1}}
+    steps:
+      - name: print_job2_env1
+        run: echo "${{ env.job2_env1 }}"
