--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -11,14 +11,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     env:
-      job1_env1: job1_env1
+      job1_env1: ${{ env.job_env }}
     steps:
       - name: print_job1_env1
         run: echo "${{ env.job1_env1 }}"
-  job2:
-    runs-on: ubuntu-latest
-    env:
-      job2_env1: '${{env.job_env}}'
-    steps:
-      - name: print_job2_env1
-        run: echo "${{ env.job2_env1 }}"
