--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,8 +10,6 @@ env:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    env:
-      job1_env1: ${{ env.job_env }}
     steps:
       - name: print_job1_env1
-        run: echo "${{ env.job1_env1 }}"
+        run: echo "${{ env.job_env }}"
