--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -4,16 +4,8 @@ on:
   push:
     branches: [main]
 
-env:
-  ENV: Env
-
 jobs:
   job1:
     runs-on: ubuntu-latest
-    env:
-      JOB_ENV: JobEnv
     steps:
-      - name: print_step_env
-        env:
-          STEP_ENV: "${{ env.ENV }} - ${{env.JOB_ENV}}"
-        run: echo "${{ env.STEP_ENV }}"
+      - run: echo $RUNNER_OS
