--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -7,5 +7,7 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    env:
+      REF: ${{ github.ref }}
     steps:
-      - run: echo $RUNNER_OS
+      - run: echo $REF
