--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -7,6 +7,5 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.ref, 'main') }}
     steps:
-      - run: echo $GITHUB_REF
+      - run: echo $APP_USER_NAME
