--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,4 +8,4 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "${{var.APP_USER_NAME}}"
+      - run: echo "${{vars.APP_USER_NAME}}"
