--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -4,12 +4,21 @@ on:
   push:
     branches: [main]
 
-env:
-  SHA_1: ${{ github['sha'] }}
-  SHA_2: ${{ github.sha }}
 
 jobs:
   job1:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
     steps:
-      - run: echo $SHA_1 $SHA_2
+      - id: step1
+        run: echo "test=hello" >> $GITHUB_OUTPUT
+      - id: step2
+        run: echo "test=world" >> $GITHUB_OUTPUT
+   job2:
+     runs-on: ubuntu-latest
+     needs: job1
+     steps:
+      - run: echo "job1 output1: ${{ needs.job1.outputs.output1 }}"
+      - run: echo "job1 output2: ${{ needs.job1.outputs.output2 }}"
