--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -19,5 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo "job1 output1: ${{ needs.job1.outputs.output1 }}"
-      - run: echo "job1 output2: ${{ needs.job1.outputs.output2 }}"
+      run: echo "job1 output1: ${{ needs.job1.outputs.output1 }}"
