--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -20,3 +20,4 @@ jobs:
     needs: job1
     steps:
       - run: echo "${{needs.job1.outputs.output1}}"
+      - run: echo "${needs.job1.outputs.output2}}"
