--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -2,22 +2,11 @@ name: workflow_demo
 
 on:
   push:
-    branches: [main]
+    branches: [aliyun]
 
 jobs:
   job1:
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
     steps:
-      - id: step1
-        run: echo "test=hello" >> $GITHUB_OUTPUT
-      - id: step2
-        run: echo "test=world" >> $GITHUB_OUTPUT
-  job2:
-    runs-on: ubuntu-latest
-    needs: job1
-    steps:
-      - run: echo "${{needs.job1.outputs.output1}}"
-      - run: echo "${{needs.job1.outputs.output2}}"
+      - run: sleep 3
+      - run: echo "Success!"
