--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,7 +10,7 @@ concurrency:
 
 jobs:
   job1:
-    runs-on: aliyun
+    runs-on: ubuntu-latest
     steps:
       - run: sleep 5
-      - run: echo "Success2!"
+      - run: echo "Success1!"
