--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,8 +5,8 @@ on:
     branches: [main]
 
 concurrency:
-  group: build
-  cancel-in-progress: false
+  group: ${{ github.workflow}}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   job1:
