--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -1,8 +1,12 @@
 name: workflow_demo2
 
 on:
-  push:
-    branches: [develop]
+  workflow_dispatch:
+    inputs:
+      name:
+        description: "Your name"
+        required: true
+        default: ""
 
 concurrency:
   group: build
@@ -12,5 +16,4 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: sleep 3
-      - run: echo "Success!"
+      - run: echo "Hello ${{ inputs.name }}!"
