--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,19 +1,12 @@
 name: workflow_demo
 
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: "Your name"
-        required: true
-        default: ""
-
-concurrency:
-  group: ${{ github.workflow}}-${{ github.ref }}
-  cancel-in-progress: true
+  push:
+    branches: [main]
 
 jobs:
-  job1:
-    runs-on: aliyun
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello ${{ inputs.name }}!"
+      - run: sleep 3
+      - run: echo "Success!"
