--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,8 +1,11 @@
 name: workflow_demo
 
 on:
-  push:
-    branches: [main]
+  pull_request_target:
+    types:
+      - opened
+    branches:
+      - main
 
 jobs:
   build:
