--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,11 +1,7 @@
 name: workflow_demo
 
 on:
-  pull_request_target:
-    types:
-      - opened
-    branches:
-      - main
+  pull_request
 
 jobs:
   build:
