--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -6,11 +6,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    cache:
-      key: my-caches
-      path: ~/.npm
     steps:
       - uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          key: my-caches
+          path: ~/.npm
       - name: Install dependencies
         run: npm install
       - name: Run tests
