--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/cache@v4
         with:
           key: my-caches
-          path: ~/.npm
+          path: ./src
       - name: Install dependencies
         run: npm install
       - name: Build
