--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -7,15 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          key: my-caches
-          path: ./src
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
+      - run: ls -lha
 
 # 使用 cache 缓存依赖
