--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -10,5 +10,6 @@ jobs:
       - run: ls -lha
       - run: pwd
       - run: ls -lha ~
-      - run: npm -v
+      - run: npm config list -l
+      - run: npm cache
 # 使用 cache 缓存依赖
