--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,11 +5,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: aliyun
     steps:
       - run: ls -lha
       - run: pwd
       - run: ls -lha ~
       - run: npm config list -l
-      - run: npm cache
 # 使用 cache 缓存依赖
