--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,10 +5,14 @@ on:
 
 jobs:
   build:
-    runs-on: aliyun
+    runs-on: ubuntu-latest
     steps:
-      - run: ls -lha
-      - run: pwd
-      - run: ls -lha ~
-      - run: npm config list -l
+      - uses: actions/cache@v4
+        with:
+          key: node-modules-${{ hashFiles('./package-lock.json') }}
+          path: ~/runner/.npm
+      - name: Install dependencies
+        run: npm install
+      - name: Build Product
+        run: npm run build
 # 使用 cache 缓存依赖
