--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,9 +1,10 @@
 name: workflow_demo
 
 on:
-  pull_request
   push:
     branches: [main]
+  pull_request:
+    branches: [feat/*]
 
 jobs:
   build:
