--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -3,9 +3,8 @@ name: workflow_demo
 on:
   push:
     branches: [main, feat/*]
-  pull_request:
-    branches: [feat/*]
-
+  pull_request
+  
 jobs:
   build:
     runs-on: ubuntu-latest
