--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -3,8 +3,9 @@ name: workflow_demo
 on:
   push:
     branches: [main, feat/*]
-  pull_request
-  
+  pull_request:
+    branches: [feat/*]
+
 jobs:
   build:
     runs-on: ubuntu-latest
