--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,3 +44,4 @@ jobs:
           path: |
             dist
             !dist/**/*.md
+          provenance: true
