--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
   attestations: write
 
 jobs:
@@ -37,10 +37,11 @@ jobs:
         run: npm install
       - name: Build product
         run: npm run build
+      - name: 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: assets
+          name: assets.zip
           path: |
             dist
             !dist/**/*.md
