--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -37,14 +37,15 @@ jobs:
         run: npm install
       - name: Build product
         run: npm run build
+      - name: zip assets
+        run: zip -r assets.zip ./dist
       - name: Generate build provenance
         uses: actions/attest-build-provenance@v2
         with:
-          subject-path: dist
+          subject-path: ./assets.zip
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: assets
           path: |
-            dist
-            !dist/**/*.md
+            ./assets.zip
