--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -1,16 +1,21 @@
-name: workflow_demo2
+name: download-artifact
 
-on:
-  push:
-    branches: [develop]
-
-concurrency:
-  group: build
-  cancel-in-progress: false
+on: pull_request
 
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
     steps:
-      - run: sleep 3
-      - run: echo "Success!"
+      - run: echo "Hello, world!" > greetings.txt
+      - uses: actions/upload-artifact@v4
+        with:
+          name: greetings.txt
+          path: ./greetings.txt
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: greetings.txt
+      - run: cat greetings.txt
