--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
+      - run: ls -lha
+      - run: cat greetings.txt
+  job3:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
       - uses: actions/download-artifact@v4
         with:
           name: greetings.txt
