--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -5,6 +5,6 @@ on: pull_request
 jobs:
   job:
     runs-on: ubuntu-latest
-    if: ${{ always() }}
+    if: ${{ success() }}
     steps:
       - run: exit 1
