--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -3,8 +3,12 @@ name: download-artifact
 on: pull_request
 
 jobs:
+  job0:
+    runs-on: ubuntu-latest
+    steps:
+      - run: exit 1
   job:
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps:
-      - run: exit 1
+      - run: echo "Success!"
