--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -9,6 +9,7 @@ jobs:
       - run: exit 1
   job:
     runs-on: ubuntu-latest
+    needs: job0
     if: ${{ success() }}
     steps:
       - run: echo "Success!"
