--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -10,6 +10,6 @@ jobs:
   job:
     runs-on: ubuntu-latest
     needs: job0
-    if: ${{ success() }}
+    if: ${{ always() }}
     steps:
       - run: echo "Success!"
