--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -5,11 +5,12 @@ on: pull_request
 jobs:
   job0:
     runs-on: ubuntu-latest
+    if: ${{ always() }}
     steps:
       - run: exit 1
   job:
     runs-on: ubuntu-latest
     needs: job0
-    if: ${{ always() }}
+    if: ${{ success() }}
     steps:
       - run: echo "Success!"
