--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -6,16 +6,14 @@ jobs:
   job1:
     runs-on: aliyun
     steps:
-      - run: echo "job1!"
+      - run: exit 1
   job2:
     runs-on: aliyun
-    needs: job1
     if: ${{ failure() }}
     steps:
       - run: echo "failure!"
   job3:
     runs-on: aliyun
-    needs: job1
     if: ${{ success() }}
     steps:
       - run: echo "success!"
