--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -9,11 +9,13 @@ jobs:
       - run: exit 1
   job2:
     runs-on: aliyun
+    needs: job1
     if: ${{ failure() }}
     steps:
       - run: echo "failure!"
   job3:
     runs-on: aliyun
+    needs: job1
     if: ${{ success() }}
     steps:
       - run: echo "success!"
