--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -25,3 +25,9 @@ jobs:
     if: ${{ always() }}
     steps:
       - run: echo "always!"
+  job-cancelled:
+    runs-on: aliyun
+    needs: job
+    if: ${{ cancelled() }}
+    steps:
+      - run: echo "cancelled!"
