--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -6,7 +6,7 @@ jobs:
   job:
     runs-on: aliyun
     steps:
-      - run: exit 1
+      - run: sleep 3000
   job-failure:
     runs-on: aliyun
     needs: job
