--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -15,4 +15,4 @@ jobs:
       - name: Step Env
         env:
           OS: ${{runner.os}}
-        run: echo $GREETING "${{ env.OS }}"
+        run: echo $GREETING
