--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -11,6 +11,7 @@ jobs:
       - run: echo ${{ env.GREETING }}
   job2:
     runs-on: aliyun
+    needs: job1
     steps:
       - name: Step Env
         env:
