--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -12,4 +12,4 @@ jobs:
       - name: Step Env
         env:
           OS: ${{runner.os}}
-        run: echo $GREETING
+        run: echo $GREETING "${{ env.OS }}"
