--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -1,10 +1,9 @@
 name: workflow_demo
 
-on: pull_request
+on: pull_request_target
 
 jobs:
-
-  job2:
+  job:
     runs-on: aliyun
     env:
       GREETING: Hello
