--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -8,10 +8,6 @@ on:
 jobs:
   job:
     runs-on: aliyun
-    env:
-      GREETING: Hello
     steps:
-      - name: Step Env
-        env:
-          OS: ${{runner.os}}
-        run: echo $GREETING "${{ env.OS }}"
+      - run: echo "${{ github.sha }}"
+      - run: echo "${{ github.ref }}"
