--- a/.github/workflows/githuh-actions-demo2.yaml
+++ b/.github/workflows/githuh-actions-demo2.yaml
@@ -11,3 +11,4 @@ jobs:
     steps:
       - run: echo "${{ github.sha }}"
       - run: echo "${{ github.ref }}"
+      - run: echo "${{ github.ref_name }}"
