--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,4 +5,4 @@ on: pull_request
 jobs:
   job:
     runs-on: aliyun
-    uses: ./reuseable-workflow.yaml@feat/test
+    uses: ./.github/workflows/reuseable-workflow.yaml@feat/test
