--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -3,6 +3,5 @@ name: Workflow Demo
 on: pull_request
 
 jobs:
-  job:
-    runs-on: aliyun
+  call-workflow:
     uses: ./.github/workflows/reuseable-workflow.yaml
