--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,4 +5,5 @@ on: pull_request
 jobs:
   call-workflow:
     runs-on: aliyun
-    uses: ./.github/workflows/reuseable-workflow.yaml
+    steps:
+      - uses: ./.github/workflows/reuseable-workflow.yaml
