--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,5 +5,6 @@ on: pull_request
 jobs:
   call-workflow:
     runs-on: aliyun
-    steps:
-      - uses: ./.github/workflows/reuseable-workflow.yaml
+    uses: ./.github/workflows/reuseable-workflow.yaml
+    with:
+      message: "Hello, world!"
