--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -7,4 +7,7 @@ jobs:
   job:
     runs-on: aliyun
     steps:
-      - run: echo "reuseable workflow"
+      - run: |
+        sleep 10
+        echo "reuseable workflow"
+
